D19 criteria fixed. Content overflow

--- a/css/style.css
+++ b/css/style.css
@@ -516,6 +516,7 @@ a {
 /* buttons */
 .button {
   display: inline-block;
+  vertical-align: middle;
   padding: 10px 24px;
   
   font-weight: 700;
@@ -587,12 +588,15 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  align-items: flex-start;
+  
+  text-align: right;
 }
 .banner {
   position: relative;
   
   width: 561px;
-  height: 230px;
+  min-height: 230px;
   padding: 20px;
   
   border-radius: 20px;
@@ -604,6 +608,7 @@ a {
   
   font-size: 35px;
   line-height: 41px;
+  text-align: left;
 }
 .banner p {
   margin: 0;
@@ -612,11 +617,9 @@ a {
   
   font-size: 18px;
   line-height: 22px;
-}
-.banner .button {
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
+  text-align: left;
+  
+  background-repeat: repeat-y;
 }
 .banner-raspberry {
   background-color: #691224;
@@ -768,10 +771,10 @@ a {
 .field-range + .range-bar {
   position: relative;
   display: inline-block;
+  vertical-align: middle;
   width: 100%;
   height: 4px;
   
-  vertical-align: middle;
   background-color: rgba(255,255,255,0.5);
   cursor: default;
   opacity: 1;
@@ -906,6 +909,7 @@ a {
 
 .catalog-item .button {
   display: inline-block;
+  vertical-align: middle;
   visibility: hidden;
 }
 .catalog-item .item-price {
@@ -1097,6 +1101,7 @@ a {
   background-color: #ffffff;
   background-image: url('../img/strawberry-bg.jpg');
   background-repeat: no-repeat;
+  background-position: 17% 39.5%;
   border-radius: 20px;
 }
 .blog-post b {
@@ -1108,14 +1113,23 @@ a {
   
   font-size: 24px;
   line-height: 30px;
+  margin: 0;
+  margin-top: 3px;
+}
+.blog-post .link-underline {
+  border-bottom-width: 2px;
+  border-bottom-color: #323232;
+}
+.blog-post .link-underline:hover {
+  border-bottom-width: 2px;
 }
 
 /* subscription */
 .email-subscribe {
   padding: 5px;
   
-  background-image: url('../img/striped-bg.png');
-  background-repeat: no-repeat;
+  background-image: url('../img/striped-bg-tile.png');
+  background-repeat: repeat;
   border-radius: 20px;
 }
 .subscribe-inner {
@@ -1153,11 +1167,13 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  align-items: flex-start;
   margin-bottom: 40px;
 }
 .blog-post,
 .email-subscribe {
   width: 560px;
+  min-height: 219px;
 }
 
 /* contacts */
@@ -1166,6 +1182,7 @@ a {
   
   background-color: #dbddc3;
   background-image: url('../img/contacts-map.jpg');
+  background-size: cover;
 }
 .contacts-map .content-wrapper {
   display: -webkit-box;
@@ -1181,7 +1198,7 @@ a {
       align-self: center;
   
   width: 302px;
-  height: 305px;
+  min-height: 305px;
   padding: 25px;
   
   background-color: #f7f7f7;
@@ -1323,6 +1340,7 @@ a {
   left: 50px;
   top: 50px;
   display: inline-block;
+  vertical-align: middle;
   padding: 20px;
   background-color: #f8f7f4;
   border-radius: 10px;
@@ -1362,8 +1380,10 @@ a {
 }
 .action-delete {
   display: inline-block;
+  vertical-align: middle;
   width: 11px;
   height: 11px;
+  
   
   border: 0;
   background-color: transparent;
@@ -1533,6 +1553,7 @@ input[type="radio"].visually-hidden {
 
 .text-right {
   text-align: right;
+  margin: 0;
 }
 .hl {
   -box-shadow: inset 0 0 0 2px yellow;
